--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -98,6 +98,6 @@
 
 @layer base {
   :root {
-    --smooth-corners: 4;
+    --sb--smooth-corners: 4;
   }
 }
